<resources>
    <string name="app_name" translatable="false">Auto Forward SMS</string>
    <string name="setting">Setting</string>
    <string name="send_to_telegram">Forward to Telegram</string>
    <string name="token" translatable="false">Token</string>
    <string name="chat_id" translatable="false">Chat ID</string>
    <string name="send_to_phone_number">Forward to Phone number</string>
    <string name="always_send_to_phone">Always forward to this number.</string>
    <string name="only_send_if_telegram_not_available">Only forward to this number if Telegram is not available.</string>
    <string name="more_option">More option</string>
    <string name="phone_number">Phone number</string>
    <string name="hint_token" translatable="false">SFKWFLSDKFJOEIFJLDSFJOWIEFDSKFSJDKFJWE</string>
    <string name="hint_chat_id" translatable="false">12345321</string>
    <string name="hint_phone_number" translatable="false">+8412345678</string>
    <string name="test_tele_connect">Test Telegram connection</string>
    <string name="saved">Saved</string>
    <string name="how_to_connect_tele">How to connect with Telegram?</string>

    <string name="guide_1">Step 1. Find @BotFather on Telegram</string>
    <string name="guide_2">Step 2. Chat /start</string>
    <string name="guide_3">Step 3. Chat /newbot</string>
    <string name="guide_4">Step 4. Enter your chat bot name. Eg: ForwardSMS</string>
    <string name="guide_5">Step 5. Enter your chat bot id (must end with \'bot\'). Eg: forward_sms_bot</string>
    <string name="guide_6">Step 6. Chat a message with your new bot. You can chat anything</string>
    <string name="guide_7">Step 7. Enter token access of your bot provide by @BotFather to TOKEN field of this app</string>
    <string name="guide_8">Step 8. Test connection and enjoy!</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="permission_request_failed_noti">This app need read and send SMS permission to perform it\'s function. We commit that your SMS will not be forwarded to anywhere out of your control.
    \nGo to setting > Permission > SMS > Allow.</string>
    <string name="go_to_setting">Go to setting</string>

    <string name="test_msg">Hello, this is test message from Forward sms application</string>
    <string name="alert_sms_enable">Please make sure your device can send SMS message. This feature may cause you to be charged at the SMS fee of your carrier</string>
    <string name="understood">I understand. Thanks</string>

    <string name="noti_tele_test_connect_success">"Connect with Telegram success"</string>
    <string name="noti_tele_cannot_find_chat_id">Cannot found ChatID, please chat a message to your Bot end try again</string>
    <string name="noti_tele_token_invalid">Token invalid</string>
    <string name="noti_tele_check_internet_connection">Check your internet connection</string>
    <string name="noti_tele_need_valid_token">Need valid token</string>

    <string name="noti_phone_save_phone">Saved phone number.</string>
    <string name="noti_phone_need_valid_phone">Need valid phone number.</string>
    <string name="noti_phone_invalid_phone">Invalid phone number, not save.</string>

    <string name="admob_app" translatable="false">ca-app-pub-7142953456838380~9456450016</string>
    <string name="admob_home_activity" translatable="false">ca-app-pub-7142953456838380/3899326410</string>
    <string name="admob_app_test" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_home_activity_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
</resources>