<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4DFBC02D"
        tools:context=".presentation.guide.GuideActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_1"
                android:textColor="@color/header_2"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:background="@drawable/bubble_chat"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@drawable/bubble_chat">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_2"
                    android:textColor="@color/header_2"/>
                <ImageView
                    android:layout_marginTop="@dimen/space_element"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/guide_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@drawable/bubble_chat">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_3"
                    android:textColor="@color/header_2"/>
                <ImageView
                    android:layout_marginTop="@dimen/space_element"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/guide_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@drawable/bubble_chat">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/header_2"
                    android:text="@string/guide_4" />
                <ImageView
                    android:layout_marginTop="@dimen/space_element"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/guide_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@drawable/bubble_chat">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/header_2"
                    android:text="@string/guide_5" />
                <ImageView
                    android:layout_marginTop="@dimen/space_element"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/guide_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@drawable/bubble_chat">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/header_2"
                    android:text="@string/guide_6" />

                <ImageView
                    android:layout_marginTop="@dimen/space_element"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/guide_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@drawable/bubble_chat">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/header_2"
                    android:text="@string/guide_7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_element"
                android:paddingStart="@dimen/padding"
                android:paddingTop="@dimen/space_element"
                android:paddingEnd="@dimen/padding"
                android:paddingBottom="@dimen/space_element"
                android:orientation="vertical"
                android:layout_gravity="start"
                android:background="@drawable/bubble_chat">
                <TextView
                    android:textColor="@color/header_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_8" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>